couple fixes, better lsp keys, initial term work

--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -66,5 +66,9 @@
         "/Users/IPringle/.cache/nvim/site/pack/packer/start/which-key.nvim",
         "/Users/IPringle/.cache/nvim/site/pack/packer/start/zenbones.nvim",
         "${3rd}/luassert/library"
+    ],
+    "diagnostics.globals": [
+        "vim",
+        "test"
     ]
 }
